--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "bcrypt": "^6.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "ejs": "^3.1.10",
     "express": "~4.16.1",
     "express-jwt": "^8.5.1",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
     "morgan": "~1.9.1",
     "mysql2": "^3.14.1"
